--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,8 @@ jobs:
   build:
     description: Setup and run application tests
     executor:
-      name: windows/default
+      # name: windows/default
+        name: windows/server-2019
     environment:
       DOTNET_VERSION: 3.1
     steps:
@@ -90,7 +91,7 @@ jobs:
         
       # - run: win/install-dotnet-sdk
       - run: dotnet --list-sdks
-      - run: choco install dotnetcore-sdk
+      # - run: choco install dotnetcore-sdk
 
       # - run: choco install gitversion.portable
       #- run: choco install netfx-4.8-devpack
