--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,57 @@
-# # Use the latest 2.1 version of CircleCI pipeline process engine.
+
+
+
+version: 2.1
+
+orbs:
+  windows: circleci/windows@2.0
+
+jobs:
+  build:
+    description: Setup and run application tests
+    executor:
+      name: windows/default
+        # name: windows/server-2019
+    # environment:
+    #   DOTNET_VERSION: 3.1
+    steps:
+      # - checkout
+        
+      # - run: win/install-dotnet-sdk
+      - run: dotnet --list-sdks
+      - run: choco install dotnetcore-sdk --version=3.1.426
+      - run: dotnet --list-sdks
+      - run: 
+          name: Run PS script
+          command: powershell -ExecutionPolicy Bypass -File test_PS_script.ps1
+      # - run: choco install gitversion.portable
+      #- run: choco install netfx-4.8-devpack
+      # - run: choco install netfx-4.7.2-devpack
+      # - run: dotnet tool install -g dotnet-core-uninstall
+      # Clone the GitHub repository
+      # - run:
+
+      #  name: Run PowerShell script
+      #    command: |
+      #       git clone https://github.com/ramannikhil7/TestPackage
+
+      #       # Change to the directory containing the PowerShell script
+      #       cd TestPackage
+
+      #       # Run the PowerShell script
+      #       # powershell.exe -File dotnet-core-uninstall-1.6.0.msi
+      #       powershell.exe -ExecutionPolicy Bypass -Command "Start-Process -Wait -FilePath 'dotnet-core-uninstall-1.6.0.msi'"
+      # - run: dotnet-core-uninstall remove --all-below 6.0 --sdk --force
+      # - run: dotnet --list-sdks
+      #- run:  dotnet restore .\all_projects.sln -p:TargetFramework=net471
+workflows:
+  build:
+    jobs:
+      - build
+
+
+
+      # # Use the latest 2.1 version of CircleCI pipeline process engine.
 # # See: https://circleci.com/docs/configuration-reference
 # version: 2.1
 
@@ -71,50 +124,3 @@
 #   build:
 #     jobs:
 #       - build
-
-
-version: 2.1
-
-orbs:
-  windows: circleci/windows@2.0
-
-jobs:
-  build:
-    description: Setup and run application tests
-    executor:
-      name: windows/default
-        # name: windows/server-2019
-    # environment:
-    #   DOTNET_VERSION: 3.1
-    steps:
-      # - checkout
-        
-      # - run: win/install-dotnet-sdk
-      - run: dotnet --list-sdks
-      - run: choco install dotnetcore-sdk --version=3.1.426
-
-      # - run: choco install gitversion.portable
-      #- run: choco install netfx-4.8-devpack
-      # - run: choco install netfx-4.7.2-devpack
-      # - run: dotnet tool install -g dotnet-core-uninstall
-      # Clone the GitHub repository
-      # - run:
-
-      #  name: Run PowerShell script
-      #    command: |
-      #       git clone https://github.com/ramannikhil7/TestPackage
-
-      #       # Change to the directory containing the PowerShell script
-      #       cd TestPackage
-
-      #       # Run the PowerShell script
-      #       # powershell.exe -File dotnet-core-uninstall-1.6.0.msi
-      #       powershell.exe -ExecutionPolicy Bypass -Command "Start-Process -Wait -FilePath 'dotnet-core-uninstall-1.6.0.msi'"
-      - run: dotnet --list-sdks
-      # - run: dotnet-core-uninstall remove --all-below 6.0 --sdk --force
-      # - run: dotnet --list-sdks
-      #- run:  dotnet restore .\all_projects.sln -p:TargetFramework=net471
-workflows:
-  build:
-    jobs:
-      - build
