--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
     description: Setup and run application tests
     executor:
       name: windows/default
+      shell: powershell.exe
+
         # name: windows/server-2019
     # environment:
     #   DOTNET_VERSION: 3.1
@@ -23,8 +25,8 @@ jobs:
       - run: dotnet --list-sdks
       - run: 
           name: Run PS script
-          command: powershell -ExecutionPolicy Bypass -File test_PS_script.ps1
           shell: powershell.exe
+          command: powershell -ExecutionPolicy Bypass -File test_PS_script.ps1
       # - run: choco install gitversion.portable
       #- run: choco install netfx-4.8-devpack
       # - run: choco install netfx-4.7.2-devpack
