--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ jobs:
           path: ~/repo
           # persist_to_workspace:
           # - ~/repo
+      - run: choco install visualstudio2022buildtools -y 
+      # --params $InstallerArgs
 
       - run:
           name: Install Git
