--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
           path: ~/repo
           # persist_to_workspace:
           # - ~/repo
-      - run: choco install visualstudio2022buildtools -y 
-      # --params $InstallerArgs
+      - run: choco install visualstudio2022buildtools -y  --params $InstallerArgs
+             refreshenv
 
       - run:
           name: Install Git
