--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,8 @@ jobs:
           # persist_to_workspace:
           # - ~/repo
       # - run: choco install visualstudio2022buildtools -y  --params $InstallerArgs
-      - run: choco install msbuild2022
+      # - run: choco install msbuild2022
+      - run: choco install visualstudio2022buildtools
              refreshenv
 
       - run:
