--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,9 @@ jobs:
           # - ~/repo
       # - run: choco install visualstudio2022buildtools -y  --params $InstallerArgs
       # - run: choco install msbuild2022
-      - run: choco install visualstudio2022buildtools
+      # - run: choco install visualstudio2022buildtools
+      - run: choco install msbuild -y
+
             #  refreshenv
 
       - run:
