--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,11 +31,23 @@ jobs:
       # - run: choco install msbuild2022
       # - run: choco install visualstudio2022buildtools
       # - run: choco install msbuild -y
-      - run:
-          name: Run PowerShell in admin mode
+      # - run:
+      #     name: Run PowerShell in admin mode
+      #     command: |
+      #       winshell true
+      #       powershell.exe -ExecutionPolicy Bypass -Command "Start-Process powershell.exe -Verb runAs"
+
+      - run: 
+          name : store the build tool
           command: |
-            winshell true
-            powershell.exe -ExecutionPolicy Bypass -Command "Start-Process powershell.exe -Verb runAs"
+            Invoke-WebRequest -Uri 'https://aka.ms/vs/16/release/vs_buildtools.exe' -OutFile 'C:\Temp\vs_buildtools.exe'
+      
+      - run:
+         name: run the build tool
+         command: |
+            Start-Process -FilePath 'C:\Temp\vs_buildtools.exe' -ArgumentList '--quiet --norestart --add Microsoft.VisualStudio.Workload.MSBuildTools --includeRecommended'
+
+
 
       - run: choco install visualstudio2019-workload-visualstudioextensionbuildtools
 
