--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,18 +36,25 @@ jobs:
       #     command: |
       #       winshell true
       #       powershell.exe -ExecutionPolicy Bypass -Command "Start-Process powershell.exe -Verb runAs"
-      - run: mkdir 'C:\vs_buildtools.exe'
+
 
       - run: 
-          name : store the build tool
-          command: |
-            Invoke-WebRequest -Uri 'https://aka.ms/vs/16/release/vs_buildtools.exe' -OutFile 'C:\vs_buildtools.exe'
+          name: Install MS Build
+          command: |   
+            Install-Module -Name Invoke-MsBuild -RequiredVersion 2.6.2
+      # install the ms build tools 
+      # - run: mkdir 'C:\vs_buildtools.exe'
+
+      # - run: 
+      #     name : store the build tool
+      #     command: |
+      #       Invoke-WebRequest -Uri 'https://aka.ms/vs/16/release/vs_buildtools.exe' -OutFile 'C:\vs_buildtools.exe'
       
 
-      - run:
-         name: run the build tool
-         command: |
-            Start-Process -FilePath 'C:\vs_buildtools.exe' -ArgumentList '--quiet --norestart --add Microsoft.VisualStudio.Workload.MSBuildTools --includeRecommended'
+      # - run:
+      #    name: run the build tool
+      #    command: |
+      #       Start-Process -FilePath 'C:\vs_buildtools.exe' -ArgumentList '--quiet --norestart --add Microsoft.VisualStudio.Workload.MSBuildTools --includeRecommended'
 
 
 
