--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,17 @@ jobs:
       - run: msbuild -version
       - run: dotnet --version
       - run: msbuild /version
-      - run:  dotnet build --version
+      # - run:  dotnet build --version
+
+      - run:
+         name: Download MSBuild
+         command: |
+             Invoke-WebRequest -Uri 'https://aka.ms/buildtools' -OutFile 'vs_buildtools.exe'
+
+      - run: 
+         name: Install MSBuild
+         command: |
+            Start-Process -FilePath '(&"${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -prerelease -products * -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe)' -ArgumentList '--quiet --wait'
 
 
 
