--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ version: 2.1
 orbs:
   windows: circleci/windows@5.0.0
   aws-cli: circleci/aws-cli@1.1.0
+  # orb-tools: circleci/orb-tools@12.0.3
+  # version-tag: commitdev/version-tag@0.0.3
 
 jobs:
   build:
@@ -33,25 +35,42 @@ jobs:
          command: |
            choco install git.portable -y
       
-      - run: 
-          name: Create a Build release
+      - run:
+          name: Create Build Tag
           command: |
-              name: Checkout code
-               uses: actions/checkout@v2
-              name: Create Release
-                id: create_release
-                uses: actions/create-release@v1
-                env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-                with:
-                  tag_name: ${{ github.ref }}
-                  release_name: Release ${{ github.ref }}
-                  body: |
-                    Changes in this Release
-                    - First Change
-                    - Second Change
-                  draft: false
-                  prerelease: false
+            if [ -n "${CIRCLE_TAG}" ]; then
+              echo "Existing tag found: ${CIRCLE_TAG}"
+            else
+              export BUILD_TAG="build-$(git rev-parse --short HEAD)"
+              echo "Creating new build tag: ${BUILD_TAG}"
+              git tag ${BUILD_TAG}
+              git push origin ${BUILD_TAG}
+              git fetch --tags
+              git config --global user.email "imnick592@gmail.com"
+              git config --global user.name "ramannikhil7"
+              git tag -a ${BUILD_TAG} -m "Automatic build tag"
+              git push origin ${BUILD_TAG}
+            fi
+
+      # - run: 
+      #     name: Create a Build release
+      #     command: |
+      #         name: Checkout code
+      #          uses: actions/checkout@v2
+      #         name: Create Release
+      #           id: create_release
+      #           uses: actions/create-release@v1
+      #           env:
+      #             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      #           with:
+      #             tag_name: ${{ github.ref }}
+                  # release_name: Release ${{ github.ref }}
+      #             body: |
+      #               Changes in this Release
+      #               - First Change
+      #               - Second Change
+      #             draft: false
+      #             prerelease: false
       
     
 
