--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,12 @@ jobs:
       #     # shell: 
           #   powershell.exe
       # - run: win/install-dotnet-sdk
-      - run: dotnet restore ./CircleCICoreProject.sln
-      - run: dotnet build
+      - run:
+          name: Build Packages
+          command: |
+            cd ~/repo
+            dotnet restore ./CircleCICoreProject.sln
+      # - run: dotnet build
       # - run: dotnet test
       - run:
           name: Run xUnit Tests
