--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,9 @@ jobs:
             git config --global user.name "ramannikhil7"
             git clone --branch main https://github.com/ramannikhil7/TestPackage ~/repo
 
-      - run: choco install dotnetcore-sdk -y 
+      # - run: choco install dotnetcore-sdk -y 
+      - run: choco install dotnetcore-sdk --version=3.1.100 -y
+
 
       # - run:
       #     name: Build Packages
