--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,11 +55,11 @@ jobs:
       #     # shell: 
           #   powershell.exe
       # - run: win/install-dotnet-sdk
-      - run:
-          name: Build Packages
-          command: |
-            cd ~/repo
-            dotnet restore ./CircleCICoreProject.sln
+      # - run:
+      #     name: Build Packages
+      #     command: |
+      #       cd ~/repo
+      #       dotnet restore ./CircleCICoreProject.sln
       # - run: dotnet build
       # - run: dotnet test
       - run:
