--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
       # - run: dotnet test
       - run:
           name: Run xUnit Tests
-          command: dotnet test --filter FullyQualifiedName~XUnitProject.UnitTest1.Test1 --logger:xunit
+          command: dotnet test --filter ./XUnitProject.UnitTest1.Test1 --logger:xunit
 
       # - run: dotnet --list-sdks
       # - run: choco install dotnetcore-sdk --version=3.1.426 -y
