--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,35 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create tag
-        run: echo ::set-env name=TAG::v1.0.${{ github.run_number }}
+        id: tag
+        run: echo "TAG=v1.0.${{ github.run_number }}" >> $GITHUB_ENV
 
       - name: Push tag
-        run: git tag ${{ env.TAG }} && git push origin ${{ env.TAG }}
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git tag ${{ env.TAG }}
+          git push origin ${{ env.TAG }}
+
+# name: Auto Tag
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   tag:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Create tag
+#         run: echo ::set-env name=TAG::v1.0.${{ github.run_number }}
+
+#       - name: Push tag
+#         run: git tag ${{ env.TAG }} && git push origin ${{ env.TAG }}
+
+
